--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,7 +4,14 @@
     <title><%= title %></title>
   </head>
   <body>
-    <img src="img/logo.jpg" alt="Logo">
-    <h1><%= title %></h1>
+    <% if ( userFullName ) { %>
+      <h2>Hello <%=userFullName%> </h2>
+      <a href="/signout">Sign out</a>
+    <% } else { %>
+      <a href="/signup">Signup</a>
+      <a href="/signin">Signin</a>
+    <% } %>
+    <br>
+      <img src="img/logo.jpg" alt="Logo">
   </body>
 </html>
