--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,16 +2,19 @@
 <html>
   <head>
     <title><%= title %></title>
+    <base href="/">
   </head>
   <body>
-    <% if ( userFullName ) { %>
-      <h2>Hello <%=userFullName%> </h2>
-      <a href="/signout">Sign out</a>
-    <% } else { %>
-      <a href="/signup">Signup</a>
-      <a href="/signin">Signin</a>
-    <% } %>
-    <br>
-      <img src="img/logo.jpg" alt="Logo">
+    <mean-app>
+      <h1>Loading...</h1>
+    </mean-app>
+    <script src="lib/core-js/client/shim.min.js"></script>
+    <script src="lib/zone.js/dist/zone.js"></script>
+    <script src="lib/reflect-metadata/Reflect.js"></script>
+    <script src="lib/systemjs/dist/system.js"></script>
+    <script src="systemjs.config.js"></script>
+    <script>
+      System.import('app').catch(function(err)) {console.error(err);});
+    </script>
   </body>
 </html>
