--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -8,6 +8,9 @@
     <mean-app>
       <h1>Loading...</h1>
     </mean-app>
+    <script type="text/javascript">
+      window.user = <%- user || 'null' %>;
+    </script>
 
     <script src="lib/core-js/client/shim.min.js"></script>
     <script src="lib/zone.js/dist/zone.js"></script>
