--- a/beestream/public/app/style.css
+++ b/beestream/public/app/style.css
@@ -1,5 +1,117 @@
 /*You'll find any CSS Styling here*/
+body{
+  font-family: Arial;
+  margin: 0;
+}
+h1{
+  text-align:  center;
+  color: black;
+  font-size: 40px;
+}
+h2{
+  text-align:  center;
+  color: black;
+  font-size: 30px;
+}
+p{
+  text-align: center;
+  font-size:  20px;
+  line-height: 45px;
+}
+#body{
+  margin: auto;
+  padding-left: 8px;
+  padding-right: 8px;
+  max-width: 1000px;
+}
+.header{
+  margin-bottom: 35px;
+  padding: 20px;
+  min-height: 50px;
+  width: auto;
+  background-color: black;
+  text-align: center;
+}
+.header-link{
+  padding-right: 45px;
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 40px;
+  color: white;
+  vertical-align: middle;
+  text-decoration: none;
+  transition:  .5s;
+}
+.header-link:hover{
+  color: lightgrey;
+}
+.construction{
+  display: none;
+}
+.block-text{
+  font-size: 18px;
+  line-height: 30px;
+}
+.streaming-block{
+  display:  inline-block;
+  max-width: 350px;
+  background-color: #EEEEEE;
+  color: black;
+  border-radius: 15px;
+  margin: 20px;
+  padding: 40px;
+  height: 350px;
+  vertical-align: middle;
+}
+.archive-block{
+  display:  inline-block;
+  max-width: 350px;
+  background-color: #EEEEEE;
+  color: black;
+  border-radius: 15px;
+  margin: 20px;
+  padding: 40px;
+  height: 350px;
+  vertical-align: middle;
+}
+.main-button{
+  width: 200px;
+  height: 50px;
+  color: white;
+  background-color: black;
+  box-shadow: none;
+  border: none;
+  border-radius: 5px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  transition: .2s;
+}
+.main-button:hover{
+  color: black;
+  background-color: white;
+  cursor: pointer;
+}
 .footer{
-  position:absolute;
-  bottom:0;
+  font-size: 12px;
+  margin-top: 20px;
+  /* position: absolute;
+  bottom: 0; */
+}
+.dropdown{
+  display:inline-block;
+  margin: auto;
+  justify-content: center;
+}
+.dropdown-div{
+  margin: auto;
+  margin-bottom: 40px;
+  text-align: center;
+}
+.video{
+  margin: auto;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
 }
