Comments system and basic styling complete.

--- a/beestream/app/views/index.ejs
+++ b/beestream/app/views/index.ejs
@@ -4,9 +4,10 @@
     <title><%= title %></title>
     <base href="/">
   </head>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <beestream>
     <h1>Loading</h1>
   </beestream>
-  <script src="build/polyfills.js"></script>
-  <script src="build/bootstrap.js"></script>
+  <script src="/build/polyfills.js"></script>
+  <script src="/build/bootstrap.js"></script>
 </html>
