--- a/beestream/public/app/style.css
+++ b/beestream/public/app/style.css
@@ -1,3 +1,4 @@
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 /*You'll find any CSS Styling here*/
 body{
   font-family: Arial;
@@ -23,6 +24,14 @@ p{
   padding-left: 8px;
   padding-right: 8px;
   max-width: 1000px;
+}
+#comment-heading{
+
+}
+#comment-content{
+  text-align: center;
+  font-size:  20px;
+  line-height: 25px;
 }
 .header{
   margin-bottom: 35px;
@@ -109,9 +118,36 @@ p{
   margin-bottom: 40px;
   text-align: center;
 }
-.video{
+.video-div{
+  display:inline-block;
+  width: 55%;
+  text-align: right;
+  vertical-align: top;
+  margin-right: 10px;
+  min-height: 480px;
+  min-width: 640px;
+}
+.video-title-div{
+  margin-top: 50;
+}
+.comment-div{
+  display:inline-block;
+  width: 35%;
+  margin-left: 10px;
+}
+.comment-form-div{
   margin: auto;
-  margin-top: 50px;
-  display: flex;
-  justify-content: center;
+  margin-bottom: 5px;
+  text-align: center;
+  padding: 15px;
+  border: 2px solid #e8e8e8;
+  border-radius: 25px;
+}
+.comment-list-div{
+  margin: auto;
+  margin-top: 5px;
+  text-align: center;
+  padding: 15px;
+  border: 2px solid #e8e8e8;
+  border-radius: 25px;
 }
