Comments system complete, basic styling refined.

--- a/beestream/public/app/style.css
+++ b/beestream/public/app/style.css
@@ -105,8 +105,6 @@ p{
 .footer{
   font-size: 12px;
   margin-top: 20px;
-  /* position: absolute;
-  bottom: 0; */
 }
 .dropdown{
   display:inline-block;
@@ -120,7 +118,7 @@ p{
 }
 .video-div{
   display:inline-block;
-  width: 55%;
+  /* width: 55%; */
   text-align: right;
   vertical-align: top;
   margin-right: 10px;
@@ -132,22 +130,19 @@ p{
 }
 .comment-div{
   display:inline-block;
-  width: 35%;
+  /* width: 35%; */
   margin-left: 10px;
 }
 .comment-form-div{
   margin: auto;
   margin-bottom: 5px;
   text-align: center;
-  padding: 15px;
-  border: 2px solid #e8e8e8;
-  border-radius: 25px;
 }
 .comment-list-div{
   margin: auto;
   margin-top: 5px;
   text-align: center;
-  padding: 15px;
-  border: 2px solid #e8e8e8;
-  border-radius: 25px;
+}
+.video-and-comments{
+  text-align: center;
 }
