Basic dashboard complete.  Development build ready.

--- a/beestream/public/app/style.css
+++ b/beestream/public/app/style.css
@@ -314,6 +314,9 @@ p{
 .dashboard-chart-invisible {
   display: none;
 }
+.dashboard-chart {
+  margin: 20px;
+}
 .dashboard-loading {
   margin: auto;
   margin-top: 15px;
