--- a/beestream/app/views/index.ejs
+++ b/beestream/app/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
     <title><%= title %></title>
     <base href="/">
   </head>
