Final package updates, fixes, and dashboard link on header

--- a/beestream/public/app/style.css
+++ b/beestream/public/app/style.css
@@ -311,11 +311,16 @@ p{
   margin-bottom: 5px;
   margin-top: 5px;
 }
-.dashboard-chart-invisible {
+.dashboard-chart-div-invisible {
   display: none;
 }
-.dashboard-chart {
+.dashboard-chart-div {
   margin: 20px;
+}
+.dashboard-chart {
+  height: auto;
+  width: auto;
+  min-height: 480px;
 }
 .dashboard-loading {
   margin: auto;
