--- a/beestream/app/views/index.ejs
+++ b/beestream/app/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.ico">
     <title><%= title %></title>
     <base href="/">
   </head>
